service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80        # Port exposed by the service
      targetPort: 81  # Port on which the app listens
  type: LoadBalancer
